refactor(author): implement author photo management and add hasPhoto field